Add new movie form

--- a/Web Development/MovieManagement/MovieManagement/Views/Movie/Index.cshtml
+++ b/Web Development/MovieManagement/MovieManagement/Views/Movie/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Movie>
 
-<h1>This is movie home page</h1>
+<h4 class="text-center">All movies</h4>
 
 
 <table class="table">
@@ -34,3 +34,5 @@
         }
     </tbody>
 </table>
+
+<a class="btn btn-success" href="/movie/add">Add Movie</a>
