Add description textarea

--- a/Web Development/MovieManagement/MovieManagement/Views/Movie/Add.cshtml
+++ b/Web Development/MovieManagement/MovieManagement/Views/Movie/Add.cshtml
@@ -32,6 +32,11 @@
         <input class="form-control" asp-for="ReleaseDate">
     </div>
 
+    <div class="col-md-12">
+        <label class="form-label" asp-for="Description"></label>
+        <textarea class="form-control" asp-for="Description"></textarea>
+    </div>
+
     <div class="col-12">
         <button type="submit" class="btn btn-success">Save</button>
     </div>
