--- a/Web Development/MovieManagement/MovieManagement/Views/Movie/Add.cshtml
+++ b/Web Development/MovieManagement/MovieManagement/Views/Movie/Add.cshtml
@@ -9,7 +9,7 @@
 
 <h3>Add new movie</h3>
 
-<form class="row g-3">
+<form class="row g-3" asp-controller="Movie" asp-action="Add" method="post">
     <div class="col-md-6">
         <label class="form-label" asp-for="Name"></label>
         <input class="form-control" asp-for="Name">
