--- a/Web Development/MovieManagement/MovieManagement/Views/Movie/Index.cshtml
+++ b/Web Development/MovieManagement/MovieManagement/Views/Movie/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model List<Movie>
 
-<h4 class="text-center">All movies</h4>
-
+@{
+    ViewData["Title"] = "All Movies";
+}
 
 <table class="table">
     <thead>
@@ -13,6 +14,7 @@
             <th scope="col">Description</th>
             <th scope="col">Release Date</th>
             <th scope="col">Moive Length</th>
+            <th scope="col">Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -29,7 +31,11 @@
                 <td>@movie.Code</td>
                 <td>@movie.Description</td>
                 <td>@movie.ReleaseDate</td>
-                <td>@movie.LengthInMin</td>                
+                <td>@movie.LengthInMin</td>   
+                <td>
+                    <a class="btn btn-outline-warning btn-sm" href="/movie/edit/@movie.Id">Edit</a>
+                    <a class="btn btn-outline-danger btn-sm" href="/movie/delete/@movie.Id">Delete</a>
+                </td>
             </tr>
         }
     </tbody>
