--- a/Web Development/MovieManagement/MovieManagement/Views/Shared/_Layout.cshtml
+++ b/Web Development/MovieManagement/MovieManagement/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MovieManagement</title>
+    <title>@ViewData["Title"] - Movie Management</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
@@ -25,9 +25,17 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="/movie/index">Movie</a>
+                        
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Movies
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="/movie/index">All Movies</a></li>
+                                <li><a class="dropdown-item" href="/movie/add">Add New</a></li>
+                            </ul>
                         </li>
+
                     </ul>
                 </div>
             </div>
