--- a/Web Development/MovieManagement/MovieManagement/Views/Shared/_Layout.cshtml
+++ b/Web Development/MovieManagement/MovieManagement/Views/Shared/_Layout.cshtml
@@ -36,6 +36,16 @@
                             </ul>
                         </li>
 
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Genres
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="/genres/index">All Genres</a></li>
+                                <li><a class="dropdown-item" href="/genres/create">Add New</a></li>
+                            </ul>
+                        </li>
+
                     </ul>
                 </div>
             </div>
