Add viewmodel, banner and refactoring

--- a/Web Development/MovieManagement/MovieManagement/Views/Movie/Add.cshtml
+++ b/Web Development/MovieManagement/MovieManagement/Views/Movie/Add.cshtml
@@ -1,39 +1,39 @@
-﻿@model Movie
+﻿@using MovieManagement.ViewModels
+@model MovieViewModel
 
 @{
     ViewData["Title"] = "Add New Movie";
-    var genres = ViewData["genreList"] as IEnumerable<SelectListItem>;
 }
 
 <h3>Add new movie</h3>
 
-<form class="row g-3" asp-controller="Movie" asp-action="Add" method="post">
+<form class="row g-3" asp-controller="Movie" asp-action="Add" method="post" enctype="multipart/form-data">
     <div class="col-md-6">
         <label class="form-label" asp-for="Name"></label>
         <input class="form-control" asp-for="Name">
         <span class="text-danger" asp-validation-for="Name"></span>
     </div>
+    
     <div class="col-md-6">
-        <label class="form-label" asp-for="Code"></label>
-        <input class="form-control" asp-for="Code">
-    </div>
-
-    <div class="col-md-4">
         <label class="form-label" asp-for="LengthInMin"></label>
         <input class="form-control" asp-for="LengthInMin">
         <span class="text-danger" asp-validation-for="LengthInMin"></span>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-6">
         <label class="form-label" asp-for="Genre"></label>
-        <select class="form-control" asp-for="Genre" asp-items="genres" multiple></select>
+        <select class="form-control" asp-for="Genre" asp-items="Model.Genres"></select>
         <span class="text-danger" asp-validation-for="Genre"></span>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-6">
         <label class="form-label" asp-for="ReleaseDate"></label>
         <input class="form-control" asp-for="ReleaseDate">
         <span class="text-danger" asp-validation-for="ReleaseDate"></span>
     </div>
 
+    <div class="col-md-12">
+        <label asp-for="Banner" class="form-label">Select Banner</label>
+        <input class="form-control" asp-for="Banner">
+    </div>
     <div class="col-md-12">
         <label class="form-label" asp-for="Description"></label>
         <textarea class="form-control" asp-for="Description"></textarea>
