--- a/Web Development/MovieManagement/MovieManagement/Views/Movie/Index.cshtml
+++ b/Web Development/MovieManagement/MovieManagement/Views/Movie/Index.cshtml
@@ -8,6 +8,7 @@
     <thead>
         <tr>
             <th scope="col">#</th>
+            <th scope="col">Banner</th>
             <th scope="col">Movie Name</th>
             <th scope="col">Genre</th>
             <th scope="col">Moive Code</th>
@@ -24,14 +25,18 @@
 
         @foreach (var movie in Model)
         {
+            var imageData = Convert.ToBase64String(movie.Banner);
+            var imageUrl = $"data:image/png;base64,{imageData}";
+
             <tr>
                 <th scope="row">@(i++)</th>
+                <td><img width="100" height="100" src="@imageUrl"></td>
                 <td>@movie.Name</td>
                 <td>@movie.Genre</td>
                 <td>@movie.Code</td>
                 <td>@movie.Description</td>
                 <td>@movie.ReleaseDate</td>
-                <td>@movie.LengthInMin</td>   
+                <td>@movie.LengthInMin</td>
                 <td>
                     <a class="btn btn-outline-warning btn-sm" href="/movie/edit/@movie.Id">Edit</a>
                     <a class="btn btn-outline-danger btn-sm" href="/movie/delete/@movie.Id">Delete</a>
