--- a/Web Development/MovieManagement/MovieManagement/Views/Movie/Index.cshtml
+++ b/Web Development/MovieManagement/MovieManagement/Views/Movie/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<Movie>
+﻿@using MovieManagement.ViewModels
+@model List<MovieViewModel>
 
 @{
     ViewData["Title"] = "All Movies";
@@ -23,23 +24,20 @@
             int i = 1;
         }
 
-        @foreach (var movie in Model)
+        @foreach (var movieViewModel in Model)
         {
-            var imageData = Convert.ToBase64String(movie.Banner);
-            var imageUrl = $"data:image/png;base64,{imageData}";
-
             <tr>
                 <th scope="row">@(i++)</th>
-                <td><img width="100" height="100" src="@imageUrl"></td>
-                <td>@movie.Name</td>
-                <td>@movie.Genre</td>
-                <td>@movie.Code</td>
-                <td>@movie.Description</td>
-                <td>@movie.ReleaseDate</td>
-                <td>@movie.LengthInMin</td>
+                <td><img class="img-thumbnail img-fluid" src="@movieViewModel.BannerDataUrl"></td>
+                <td>@movieViewModel.Name</td>
+                <td>@movieViewModel.Genre</td>
+                <td>@movieViewModel.Code</td>
+                <td>@movieViewModel.Description</td>
+                <td>@movieViewModel.ReleaseDate</td>
+                <td>@movieViewModel.LengthInMin</td>
                 <td>
-                    <a class="btn btn-outline-warning btn-sm" href="/movie/edit/@movie.Id">Edit</a>
-                    <a class="btn btn-outline-danger btn-sm" href="/movie/delete/@movie.Id">Delete</a>
+                    <a class="btn btn-outline-warning btn-sm" href="/movie/edit/@movieViewModel.Id">Edit</a>
+                    <a class="btn btn-outline-danger btn-sm" href="/movie/delete/@movieViewModel.Id">Delete</a>
                 </td>
             </tr>
         }
