--- a/Web Development/MovieManagement/MovieManagement/Views/Movie/Edit.cshtml
+++ b/Web Development/MovieManagement/MovieManagement/Views/Movie/Edit.cshtml
@@ -1,12 +1,8 @@
-﻿@model Movie
+﻿@using MovieManagement.ViewModels
+@model MovieViewModel
 
 @{
     ViewData["Title"] = "Edit Movie";
-
-    List<SelectListItem> genres = new();
-    genres.Add(new SelectListItem() { Text = "Comedy", Value = "Comedy" });
-    genres.Add(new SelectListItem() { Text = "Science Fiction", Value = "Science Fiction" });
-    genres.Add(new SelectListItem() { Text = "Horror", Value = "Horror" });
 }
 
 
@@ -26,7 +22,7 @@
     </div>
     <div class="col-md-4">
         <label class="form-label" asp-for="Genre"></label>
-        <select class="form-control" asp-for="Genre" asp-items="genres"></select>
+        <select class="form-control" asp-for="Genre" asp-items="Model.Genres"></select>
     </div>
     <div class="col-md-4">
         <label class="form-label" asp-for="ReleaseDate"></label>
