--- a/Web Development/MovieManagement/MovieManagement/Views/Movie/Index.cshtml
+++ b/Web Development/MovieManagement/MovieManagement/Views/Movie/Index.cshtml
@@ -5,16 +5,44 @@
     ViewData["Title"] = "All Movies";
 }
 
+<form asp-action="Index" method="get" class="row">
+    <div class="col-md-7">
+        <input class="form-control" type="text" name="SearchString" value="@ViewData["CurrentFilter"]" placeholder="Type movie keywords: name, description etc." />
+    </div>
+    <div class="col-md-2">
+        <div class="btn-group w-100">
+            <input class="form-control btn btn-primary" type="submit" value="Search" />
+            <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="visually-hidden">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu">
+                <li>
+                    <a class="dropdown-item" asp-action="Index">Clear all filter</a>
+                </li>
+             </ul>
+        </div>
+    </div>
+
+    <div class="col-md-3">
+        <a class="btn btn-success form-control" href="/movie/add">Add Movie</a>
+    </div>
+</form>
+<hr />
 <table class="table">
     <thead>
         <tr>
             <th scope="col">#</th>
-            <th scope="col">Banner</th>
-            <th scope="col">Movie Name</th>
+            <th scope="col" style="width:150px">Banner</th>
+
+            <th scope="col">
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["MovieNameSortParam"]">Name</a>
+            </th>
             <th scope="col">Genre</th>
             <th scope="col">Moive Code</th>
             <th scope="col">Description</th>
-            <th scope="col">Release Date</th>
+            <th scope="col">
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["ReleaseDateSortParam"]">Release Date</a>
+            </th>
             <th scope="col">Moive Length</th>
             <th scope="col">Actions</th>
         </tr>
@@ -43,5 +71,3 @@
         }
     </tbody>
 </table>
-
-<a class="btn btn-success" href="/movie/add">Add Movie</a>
