Add cards for movie info and refactoring

--- a/Web Development/MovieManagement/MovieManagement/Views/Movie/Add.cshtml
+++ b/Web Development/MovieManagement/MovieManagement/Views/Movie/Add.cshtml
@@ -20,9 +20,9 @@
         <span class="text-danger" asp-validation-for="LengthInMin"></span>
     </div>
     <div class="col-md-6">
-        <label class="form-label" asp-for="Genre"></label>
-        <select class="form-control" asp-for="Genre" asp-items="Model.Genres"></select>
-        <span class="text-danger" asp-validation-for="Genre"></span>
+        <label class="form-label" asp-for="GenreId"></label>
+        <select class="form-control" asp-for="GenreId" asp-items="Model.Genres"></select>
+        <span class="text-danger" asp-validation-for="GenreId"></span>
     </div>
     <div class="col-md-6">
         <label class="form-label" asp-for="ReleaseDate"></label>
